backend/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
  - host: your-domain-name.com
    http:
      paths:
      - path: /auth
        pathType: Prefix
        backend:
          service:
            name: auth-service
            port:
              number: 80
      - path: /image
        pathType: Prefix
        backend:
          service:
            name: image-service
            port:
              number: 80
      - path: /friendship
        pathType: Prefix
        backend:
          service:
            name: friendship-service
            port:
              number: 80
